--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"pocketbase": "^0.14.4",
+		"sass": "^1.62.1"
+	}
 }
